fix the text overflow in latest comment

--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,7 @@ ul.collection > li {
 .dropdown-content {
   z-index: 999 !important;
 }
+
+.latest-comment {
+  word-wrap: break-word;
+}
